# minesweeper_c

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE  Makefile  README.md
includes/: msControl.h  msDisplay.c  msFloodFill.h  msGame.h  msGlobal.h  msMenu.h  msMinefield.h  msUserInput.h  msUtil.h
src/: CMakeLists.txt  TODO.md  main.c  msFloodFill.c  msGame.c  msMinefield.c  msUtil.c
